<resources>

    <string name="patrol_app_name">企业巡检</string>

    <string name="user_name">用户名</string>

    <string name="password">密码</string>

    <string name="patrol_login">巡检账号登录</string>

    <string name="user_info_empty">用户信息为空</string>

    <string name="please_input_username">请输入用户名</string>

    <string name="please_input_password">请输入密码</string>

    <string name="demo_action">com.random.main</string>

    <string name="demo_login_action">com.random.login</string>

    <string name="login_success">巡检账号登录成功</string>


    <string name="daily_patrol">日常巡检</string>

    <string name="process_desc">请按照以下流程进行巡检</string>

    <string name="important_part">重要仪器巡检</string>

    <string name="important_area">重要区域巡检</string>

    <string name="area_stand">区域规范</string>

    <string name="device_stand">仪器指标</string>

    <string name="start_patrol">开始巡检</string>

    <string name="test">设备 规范条目：\n 1、条目1 \n 2、条目2 \n 3、条目3</string>

    <string name="test1">设备 安全指标：\n 1、条目1 \n 2、条目2 \n 3、条目3</string>


    <string name="device_name">设备名称</string>

    <string name="device_patrol_commit">仪器巡检记录提交</string>
    <string name="area_patrol_commit">区域巡检提交</string>

    <string name="patrol_question1">安全是否合格?</string>
    <string name="patrol_question2">室温多少?</string>
    <string name="patrol_question3">卫生是否合格?</string>

    <string name="device_patrol_question1">设备显示的值?</string>
    <string name="device_patrol_question2">设备是否损坏?</string>
    <string name="device_patrol_question3">设备位置是否正确?</string>

    <string name="submit">提交</string>
    <string name="take_photo">拍照</string>

    <string name="device_error_and_call">仪器异常，紧急呼叫</string>

    <string name="home">首页</string>
    <string name="call">呼叫</string>
    <string name="mine">我的</string>
    <string name="logout">退出登录</string>


</resources>