<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="deviceId"
            type="String" />

        <variable
            name="deviceStandard"
            type="String" />

        <variable
            name="activity"
            type="com.mingshu.vm.patrol.device.DeviceInfoActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".device.DeviceInfoActivity">

        <!--        标题-->
        <TextView
            android:id="@+id/tv_tittle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:background="#313131"
            android:gravity="center"
            android:text="@string/device_stand"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        开始巡检-->
        <TextView
            android:id="@+id/tv_start_patrol"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            android:onClick="@{activity::onClick}"
            android:text="@string/start_patrol"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        下面的内容-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:gravity="start"
            android:text="@{deviceStandard}"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_tittle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_urgency_call"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/baseThemeColor"
            android:gravity="center"
            android:onClick="@{activity::onClick}"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/device_error_and_call"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
